Development (#11)
* FIX/CHANGED Function GET usersByNameWithLocation -> location can be from the actual user or from any desired region / accentuation now dont interferes in regex match / FIX controller and controller tests

* CREATE Function PUT updateProducerToBeFollowed and updateProducerToBeUnfollowed -> data,domain, tests data

* FINISHED Functions PUT updateProducerToBeFollowed and DELETE updateProducerToBeUnfollowed -> domain (FIX), controller, tests controller

* CREATED Function POST Post -> MongoDatabase,data

* adds travis

* small changes to timestamp testing

* unique index for user now is facebook/google id instead of email

* CHANGES Function PUT UpdateInstagramProfile -> String now corresponds to profile name, not complete profile URL

* CREATE POST Function InsertPosts -> data, domain, controller, data tests and controller tests // CREATE GET Function GetPosts -> data, domain (not finished)

* CHANGES Function GetPosts -> data, tests data, domain

* CHANGES Function GetPosts -> data,domain,controller,data tests and controller tests / CREATE Function GetPostsFromUser -> data,domain,controller,data tests and controller tests

* CHANGES Function getPostsFromUser -> Database now sort answers by submissionDate and has a limited return size / ADD data tests and controller tests to Function POST post (VideoPost and TextPost) / CREATE Function POST insertActivity -> data,domain,controller,data tests and controller tests / CREATE Function Get activitiesFromUser -> data,domain,controller,data tests and controller tests

* CHANGES Function getPostsForFeed -> Returns empty List if user is not following someone / CREATE Function getRandomPosts -> data,domain,controller, data tests and controller tests

* CREATE Function PUT updateComments (post) -> data,domain,controller,data tests and controller tests

* CREATE FUNCTION Put updateCommentsTrivia -> data,domain,controller,data tests and controller tests / CHANGES: When challenges are s